<resources>
    <string name="app_name">YukTanding</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="user_hint">Champname</string>
    <string name="pass_hint">Password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">no Handphone</string>
    <string name="google">Google</string>
    <string name="daftar">Sign Up</string>
    <string name="retype_password">Confirm password</string>
    <string name="create_username">Username</string>
    <string name="email">Email</string>
    <string name="belum">Belum punya akun? <b>Sign Up</b></string>
    <string name="atau">atau Sign In dengan</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mohon_email">Email salah</string>
    <string name="masuk_dengan">Masuk Dengan :</string>
    <string name="title_activity_menu_home">MenuHome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Akun">Akun</string>
    <string name="set">Setting</string>
    <string name="squad">Squad</string>
    <string name="jadwal">Jadwal</string>
    <string name="riwayat">Riwayat</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Pengaturan</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_pesan_lapngan">Find Match</string>
    <string name="title_activity_cari_lawan">CariLawan</string>
    <string name="title_activity_buat_tim">ActivityBuatTim</string>
    <string name="frag1_txt_btn_futsal">Futsal</string>
    <string name="frag1_txt_btn_bultang">Badminton</string>
    <string name="frag1_txt_btn_asg">Airsoftgun</string>
    <string name="frag1_txt_btn_bowling">Bowling</string>
    <string name="frag1_txt_avail">Schedule</string>
    <string name="frag1_txt_create_match">Select Sport</string>
    <string name="txt_frag1_feature">Additional Feature(Cooming Soon)</string>

    <array name="daerah_tim">
        <item>Pilih Daerah</item>
        <item>Banten</item>
        <item>Jakarta</item>
        <item>Jawa Barat</item>
    </array>

    <array name="olahraga">
        <item>Pilih Olahraga</item>
        <item>Futsal</item>
        <item>Badminton</item>
        <item>Basket</item>
    </array>

    <!--===============================welcome activity==========================================-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="title_activity_jambu">jambu</string>
    <!--=================================welcome end=============================================-->

</resources>
