<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_squad"
            android:icon="@drawable/ic_action_achievement"
            android:title="@string/squad" />
        <item
            android:id="@+id/nav_schedulle"
            android:icon="@drawable/ic_schedule"
            android:title="@string/jadwal" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/riwayat" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_action_help"
            android:title="@string/help" />
    </group>

    <item android:title="@string/Akun">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/set" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_action_exit"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
