<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="id.yuktanding.yuktanding.SignUp">

    <ImageView
        android:id="@+id/image_background_log"
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:background="@color/yukTandingOren"
        app:srcCompat="@color/yukTandingOren"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" />

    <ScrollView
        android:id="@+id/ScrollLog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/linLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/activity_guide"
                tools:layout_editor_absoluteY="-263dp"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/logo_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/yuklogo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_input_layout_log"
                style="@style/Widget.TextInputLayoutFull"
                app:hintTextAppearance="@style/ColaFloat"
                android:layout_marginTop="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_log"
                android:layout_height="0dp"
                android:layout_width="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_input_edit_log"
                    style="@style/Widget.TextEdit"
                    android:hint="@string/user_hint"
                    android:drawableStart="@drawable/ic_account_circle"
                    android:drawablePadding="8dp"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass_in_log"
                style="@style/Widget.TextInputLayoutFull"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#ffffff"
                app:hintTextAppearance="@style/ColaFloat"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_input_layout_log"
                android:layout_height="0dp"
                android:layout_width="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pass_input_edit_log"
                    style="@style/Widget.TextEdit"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:hint="@string/pass_hint"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_Login"
                style="@style/tombol"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/oren"
                android:background="@drawable/bentuk_tmbl"
                android:text="@string/login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_in_log"
                android:layout_height="0dp"
                android:layout_width="0dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/txt_tanya"
                android:text="@string/belum"
                android:textSize="18sp"
                android:textColor="@color/color_text"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_Login"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/txt_atau"
                android:text="@string/atau"
                android:textSize="18sp"
                android:textColor="@color/color_text"
                android:layout_marginTop="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_tanya"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/g_signin_log"
                style="@style/tombol"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_atau"
                android:layout_height="0dp"
                android:layout_width="0dp" />

            <Button
                android:id="@+id/phone_log"
                style="@style/tombol"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/oren"
                android:background="@drawable/bentuk_tmbl"
                android:text="@string/login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_in_log"
                android:layout_height="0dp"
                android:layout_width="0dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/txt_forget"
                android:text="@string/lupa_password"
                android:textSize="18sp"
                android:textColor="@color/color_text"
                android:layout_marginTop="@dimen/margin_edittext"
                android:clickable="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/g_signin_log"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>